public/css/base.css
/**
 *
 * Do not edit this file as it would be overwritten when upgrading.
 * Edit the custom layout instead.
 */

html,
body {
	margin: 0;
	padding: 0;
	height: 100%;
}

* {
	box-sizing: border-box;
}



/*** MAIN ***/
#main {
	width: 1200px;
	height: 100%;
}

.pinedocs-logo {
	font-family: 'Fugaz One', cursive;
	font-size: 54px;
	letter-spacing: -0.08em;
	color: #eee;
}



/*** MENU ***/
#menu_wrapper {
	width: 350px;
	height: 100%;
	overflow: hidden;
	float: left;
	position: relative;
}

#menu {
	min-height: 100%;
	padding: 20px 20px 40px;
	width: 350px;
	height: 100%;
	width: 368px;
	overflow-y: scroll;
}

#menu_close {
	display: none;
	cursor: pointer;
	position: absolute;
	top: 0;
	right: 0;
	padding: 10px 16px;
	background: rgba(255, 255, 255, 0.6);
	font-weight: bold;
	border: none;
}

#menu ul > ul {
	display: none;
}

#menu a {
	word-break: break-all;
}

#menu_top {
	padding-bottom: 20px;
	width: 310px;
	background: inherit;
}

#menu i.fa {
	margin-right: 10px;
}



/*** MENU FOOTER ***/
#menu footer {
	margin-top: 2em;
	font-size: 0.8em;
}

#search {
	width: 100%;
	border: 0;
}



/*** CONTENT ***/
#content_wrapper {
	float: left;
	width: 850px;
	height: 100%;
}

#content_top {
	width: 850px;
	position: fixed;
}

#content_top #mobile_nav_icon {
	display: none;
	cursor: pointer;
}

#content_top .filesize {
	padding-left: 1em;
	font-size: 0.8em;
}

#content_top,
#loading,
#file_content {
	padding: 20px;
}

#loading,
#file_content {
	padding-top: 80px;
}

#file_content {
	overflow-y: auto;
	/*width: 850px;*/
	height: 100%;
	/*height: 500px;*/
}



/*** LOADING ***/
#loading {
}



/*** ERROR ***/
.error {
	text-align: center;
	color: #f66;
}



/*** TEXT/MARKDOWN ***/
#content_wrapper p,
#content_wrapper ul,
#content_wrapper ol,
#content_wrapper code {
	line-height: 1.5em;
}

h1,
h2 {
	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
}

h1 {
	font-size: 2.4em;
}

h2 {
	font-size: 1.8em;
}

h3 {
	font-size: 1.4em;
}

h4 {
	font-size: 1.2em;
}

h5 {
	font-size: 1em;
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child {
	margin-top: 0;
}

img {
	max-width: 100%;
}

audio,
video {
	width: 100%;
}

blockquote {
	margin: 1em 0;
	padding: 0 10px;
	border-left: 6px solid;
}

#content_wrapper code {
	display: inline;
	padding: 2px 4px;
	border-radius: 2px;
}

#content_wrapper pre code {
	display: block;
	padding: 1em;
	border-radius: 2px;
}

#content_wrapper code.file {
	display: block;
	white-space: pre;
	padding-top: 1em;
	padding-bottom: 1em;
}

#content_wrapper code.nobg {
	background: none;
}



/** DOWNLOAD FILE **/
.download {
	text-align: center;
	margin: 20% 0 0 0;
}

.download > p {
	font-size: 1.2em;
}

.download > .download__link {
	font-size: 1.2em;
	background: #456;
	color: #fff;
	padding: 0.5em 1em;
	text-decoration: none;
	border-radius: 0.35em;
}

.download > .download__link:hover {
	opacity: 0.8;
}



/*** RESPONSIVE ***/
@media (max-width: 1200px) {
	#menu_wrapper {
		position: fixed;
		z-index: 2;
		/*width: 100%;*/
		display: none;
		max-width: 100%;
	}

	.hidden {
		display: none !important;
	}

	#menu_close {
		display: block;
	}

	#menu {
		/*max-width: 100%;*/
	}


	#main,
	#content_wrapper,
	#content_top {
		width: 100% !important;
	}

	#content_top #mobile_nav_icon {
		display: inline;
		font-size: 1.2em;
		color: #0645ad;
	}
}

